# gpu-scoring-tool

./: .flake8  .gitignore  README.md  cleaned_sample.csv  dedup_sample.csv  docker-compose.yml  normalized_gpu_titles.csv  pyproject.toml  ruff.toml  sample.csv  sample_enriched.csv  sample_for_dedup.csv  sample_gpu_titles.csv  test_models.py
.junie/: guidelines.md  summary.md
architecture/: README.md
data/: perplexity_eval.yaml  perplexity_predictions.csv
glyphd/: Dockerfile  openapi.json  pyproject.toml  test_app.py
glyphd/glyphd/data/: gpu.sqlite
glyphd/migrations/: 001_add_import_index.sql
glyphd/src/glyphd/: __main__.py  cli.py
glyphd/src/glyphd/api/: router.py
glyphd/src/glyphd/api/models/: __init__.py  imports.py  listings.py  ml.py  models.py  reports.py  schema_version.py
glyphd/src/glyphd/api/routes/: forecast.py  health.py  import_csv.py  import_from_pipeline.py  listings.py  ml.py  models.py  persist.py  report.py  schema_version.py  upload_artifact.py
glyphd/src/glyphd/core/: dependencies.py  loader.py
glyphd/src/glyphd/core/dependencies/: gpu_listings.py  gpu_models.py  insight_report.py  listing_repository.py  storage.py
glyphd/src/glyphd/core/forecast/: __init__.py
glyphd/src/glyphd/core/resources/: csv_loader.py  resource_context.py  sql_loader.py  yaml_loader.py
glyphd/src/glyphd/core/resources/loaders/: gpu_metadata.py  insight_report.py  scored_listings.py
glyphd/src/glyphd/core/services/: __init__.py  pipeline_service.py
glyphd/src/glyphd/core/storage/: __init__.py  interface.py  sqlite_store.py
glyphd/src/glyphd/resources/: insight.yaml  market_value_gpu_summary.csv  scored_sample.csv  test_market_value.csv  test_scored.csv
glyphd/src/glyphd/resources/sql/: __init__.py  schema.sql
glyphd/src/glyphd/sqlite/: SCHEMA.md  models.py  schema.sql
glyphd/src/glyphd/sqlite/migrations/: alembic.ini  env.py
glyphd/src/glyphd/sqlite/migrations/versions/: 20250729_initial_schema.py
glyphd/tests/: README.md  conftest.py  test_api.py  test_api_forecast.py  test_api_persist.py  test_cli.py  test_forecast.py  test_loader.py  test_persistence_api.py  test_schema.py  test_sqlite_store.py
glyphsieve/: backfill_summary.md  pyproject.toml  test_wamatek_real_data.py
glyphsieve/demo/: input.csv  output.csv  run.sh  stdout.txt
glyphsieve/ml/data/: dataset_info.yaml  test.csv  train.csv  training_set.csv
glyphsieve/replay/: fp_set.csv
glyphsieve/resources/: gpu_models.json
glyphsieve/src/glyphsieve/: __init__.py  __main__.py
glyphsieve/src/glyphsieve/cli/: clean.py  dedup.py  enrich.py  load_shopify.py  main.py  normalize.py  pipeline.py  registry.py  report.py  score.py  shopify.py  tag.py
glyphsieve/src/glyphsieve/core/: cleaning.py  deduplication.py  enrichment.py  heuristics.py  normalization.py  reporting.py  scoring.py
glyphsieve/src/glyphsieve/core/ingest/: __init__.py  base_loader.py  registry.py
glyphsieve/src/glyphsieve/core/ingest/shopify/: __init__.py  base_loader.py  wamatek_loader.py
glyphsieve/src/glyphsieve/core/resources/: base_csv_loader.py  base_resource_context.py  base_resource_loader.py  base_sql_loader.py  base_yaml_loader.py  csv_loader.py  pkl_loader.py  yaml_loader.py
glyphsieve/src/glyphsieve/ml/: __init__.py  cli_backfill.py  cli_disagreements.py  cli_evaluate.py  cli_extract.py  cli_perplexity_eval.py  cli_predict_is_gpu.py  cli_train_title_only.py  data_extraction.py  disagreement_analysis.py  evaluation.py  ml_signal.py  predictor.py  services.py  train_gpu_classifier.py  train_test_split.py  train_title_only.py  training.py
glyphsieve/src/glyphsieve/models/: disagreement_scoring.py  gpu.py  heuristic.py  ml_config.py  quantization.py  registry.py  scoring.py  scoring_weights.py
glyphsieve/src/glyphsieve/resources/: additional_nvidia_gpus.yaml  disagreement_scoring.yaml  gpu_specs.yaml  quantization_heuristic.yaml  scoring_weights.yaml
glyphsieve/src/glyphsieve/resources/configs/: ml_config.yaml
glyphsieve/src/glyphsieve/resources/models/: gpu_classifier_v2.pkl
glyphsieve/tests/: __init__.py  test_cleaning.py  test_cli_pipeline.py  test_deduplication.py  test_enrichment.py  test_heuristics.py  test_ml_backfill.py  test_ml_config.py  test_ml_data_extraction.py  test_ml_disagreements.py  test_ml_integration.py  test_ml_train_test_split.py  test_ml_training.py  test_normalization.py  test_pipeline.py  test_registry.py  test_reporting.py  test_scoring.py  test_shopify_loader.py  test_source_loader.py
models/: gpu_classifier.pkl  metrics.yaml  metrics_title_only.yaml
(+436 files in other folders)
