[project]
name = "gpu-scoring-tool"
version = "0.1.0"
description = "GPU Financial Scoring Model"
readme = "README.md"
authors = [
    {name = "Lucien Brule", email = "lucien@brule.io"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "click",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
]
[tool.uv.workspace]
members = ["glyphsieve"]