[project]
name = "gpu-scoring-tool"
version = "0.1.0"
description = "GPU Financial Scoring Model"
readme = "README.md"
authors = [
    {name = "Lucien Brule", email = "lucien@brule.io"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "click",
    "rich",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=5.0.0",
    "scikit-learn>=1.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
]
[tool.uv.workspace]
members = ["glyphsieve", "glyphd"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
