[project]
name = "gpu-scoring-tool"
description = "GPU Financial Scoring Model"
readme = "README.md"
authors = [
    {name = "Lucien Brule", email = "lucien@brule.io"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pandas-stubs==2.3.0.250703",
]
dynamic = ["version"]

[project.optional-dependencies]
lint = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "flake8-pyproject",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

test = [
    "pytest>=8.2.1",
]

formatter = [
    "black",
    "isort",
]

typecheck = [
    "mypy",
]
[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]  # Optional but useful for pydantic v2 model support

[tool.uv.workspace]
members = ["glyphsieve", "glyphd"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tools.flake8_glyphsieve"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]

[project.entry-points."flake8.extension"]
GLS = "tools.flake8_glyphsieve.plugin:Plugin"
