[project]
name = "glyphd"
version = "0.1.0"
description = "FastAPI daemon for GPU scoring tool"
authors = [
    {name = "Lucien Brule", email = "lucien@brule.io"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "click",
    "pydantic",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
